configmap update in the deployment

--- a/helm/charts/orchestrator/values.yaml
+++ b/helm/charts/orchestrator/values.yaml
@@ -135,7 +135,7 @@ extraInitContainers: []
 #   command: ['echo', "hey"]
 
 config:
-  integration.config1: ""
+  DP_INTERNAL_URL: ""
 
 volumes:
   orchestrator:
