--- a/helm/charts/orchestrator/templates/service.yaml
+++ b/helm/charts/orchestrator/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "orchestrator.fullname" . }}
-  namespace: {{ include ".Values.global.orchestrator.data.DP_INTEGRATION_NAMESPACE" . }}
+  namespace: {{ include ".Values.global.orchestrator.data.namespace" . }}
   labels:
     {{- include "orchestrator.labels" . | nindent 4 }}
 spec:
