--- a/helm/charts/orchestrator/templates/serviceaccount.yaml
+++ b/helm/charts/orchestrator/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "orchestrator.serviceAccountName" . }}
+  namespace: {{ include ".Values.global.orchestrator.data.namespace" . }}
   labels:
     {{- include "orchestrator.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
