--- a/helm/charts/orchestrator/templates/storage-pvc.yaml
+++ b/helm/charts/orchestrator/templates/storage-pvc.yaml
@@ -5,6 +5,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ include "orchestrator.storage.pvc.name" . }}
+  namespace: {{ include ".Values.global.orchestrator.data.namespace" . }}
   labels:
   {{- include "orchestrator.labels" . | nindent 4 }}
   annotations:
