--- a/helm/charts/orchestrator/templates/deployment.yaml
+++ b/helm/charts/orchestrator/templates/deployment.yaml
@@ -29,7 +29,9 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.serviceAccount.enabled }}
       serviceAccountName: {{ include "orchestrator.serviceAccountName" . }}
+      {{- end }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -40,7 +42,7 @@ spec:
           image: {{ include ".Values.global.orchestrator.image.registry" . }}/tci/tci-orchestrator:{{ include ".Values.global.orchestrator.image.tag" . }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
-            - name: configs
+            - name: data
               mountPath: {{ include ".Values.global.orchestrator.data.volumePath" . }}
           livenessProbe:
             httpGet:
@@ -59,7 +61,98 @@ spec:
                 configMapKeyRef:
                   name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
                   key: DP_INTERNAL_URL
+        {{- if .Values.global.orchestrator.deploymanager.enabled }}
+        - name: deploymanager
+          image: {{ include ".Values.global.orchestrator.deploymanager.image.registry" . }}/tci/tci-app-proxy:{{ include ".Values.global.orchestrator.deploymanager.image.tag" . }}
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          resources:
+            {{- toYaml .Values.global.orchestrator.deploymanager.resources | nindent 12 }}
+          volumeMounts:
+            - name: configs
+              mountPath: /configs
+          env:
+            - name: DEPLOY_MANAGER_SERVICE
+              value: "true"
+            - name: APPS_NAMESPACE
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: APPS_NAMESPACE
+          ports:
+            - containerPort: 7830
+              protocol: TCP
+              name: deploymanager
+        {{- end }}
+        {{- if .Values.global.orchestrator.logging.enabled }}
+        - name: fluent-bit
+          image: {{ .Values.global.orchestrator.logging.image.registry }}/tci/fluent-bit:{{ .Values.global.orchestrator.logging.image.registry.tag }}
+          imagePullPolicy: {{ .Values.global.imagePullPolicy }}
+          resources:
+            {{- toYaml .Values.global.orchestrator.deploymanager.resources | nindent 12 }}
+          securityContext:
+            privileged: true
+          ports:
+            - containerPort: 2020
+          env:
+            - name: ACCOUNT_ID
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: SERVICE_LOGSERVER_HOST
+            - name: SERVICE_LOGSERVER_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: SERVICE_LOGSERVER_HOST
 
+            - name: SERVICE_LOGSERVER_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: SERVICE_LOGSERVER_USER
+
+            - name: LOGSERVER_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: LOGSERVER_PASSWORD
+
+            - name: SERVICE_LOGSERVER_INDEX
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: SERVICE_LOGSERVER_INDEX
+
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: TIBCO_INTERNAL_INTERCOM_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: TIBCO_INTERNAL_INTERCOM_URL
+            - name: POD_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.uid
+            - name: CONTAINER_NAME
+              value: {{ .Chart.Name }}
+
+          volumeMounts:
+            - name: dockercontainerlogs
+              mountPath: /var/lib/docker/containers/
+            - name: podlogs
+              mountPath: /var/log/pods
+            - name: fluent-bit-config
+              mountPath: /fluent-bit/etc/
+        terminationGracePeriodSeconds: 10
+        {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -73,6 +166,17 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
-        - name: configs
+        - name: data
           persistentVolumeClaim:
             claimName: {{ include "orchestrator.storage.pvc.name" . }}
+        {{- if .Values.global.orchestrator.logging.enabled }}
+        - name: dockercontainerlogs
+            hostPath:
+              path: /var/lib/docker/containers/
+        - name: podlogs
+          hostPath:
+            path: /var/log/pods
+        - name: fluent-bit-config
+          configMap:
+            name: {{ include "cic-tenant-tci-orchestrator.consts.fluentConf" . }}
+        {{- end }}
