--- a/helm/charts/orchestrator/values.yaml
+++ b/helm/charts/orchestrator/values.yaml
@@ -10,11 +10,23 @@ global:
       registry: ""
       tag: ""
       fluentbit-tag: "1.9.4"
+    deploymanager:
+      image:
+        enabled: false
+        registry: ""
+        tag: ""
+        resources: {}
+    logging:
+      image:
+        enabled: false
+        registry: ""
+        tag: ""
+        resources: {}
 
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: tci/tci-orchestrator
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -24,6 +36,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
+  enabled: false
   # Specifies whether a service account should be created
   create: true
   # Annotations to add to the service account
