--- a/helm/recipe/integration.yaml
+++ b/helm/recipe/integration.yaml
@@ -26,7 +26,7 @@ helmCharts:
                   requests:
                     storage: 2Gi
                 volumeName:
-              existingClaim: ""
+              existingClaim: "pvc"
           config:
             DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
     flags:
