--- a/helm/charts/orchestrator/templates/ingress.yaml
+++ b/helm/charts/orchestrator/templates/ingress.yaml
@@ -1,22 +1,32 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "orchestrator.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+  {{- $fullName := include "orchestrator.fullname" . -}}
+  {{- $releaseName := .Release.Name -}}
+  {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
+  {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
+  {{- end }}
+  {{- end }}
+  {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
+apiVersion: networking.k8s.io/v1
+  {{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
+  {{- else -}}
 apiVersion: extensions/v1beta1
-{{- end }}
+  {{- end }}
 kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
+    app.kubernetes.io/component: load-balancer
     {{- include "orchestrator.labels" . | nindent 4 }}
-  namespace: {{ .Values.global.orchestrator.data.namespace }}
-  {{- with .Values.ingress.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- with .Values.ingress.annotations }}
+      {{- toYaml . | nindent 4 }}
+      {{- end }}
 spec:
+  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  ingressClassName: {{ .Values.ingress.className }}
+  {{- end }}
   {{- if .Values.ingress.tls }}
   tls:
     {{- range .Values.ingress.tls }}
@@ -28,15 +38,24 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-          {{- range .paths }}
-          - path: {{ . }}
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
-          {{- end }}
+  {{- range .Values.ingress.hosts }}
+  {{- if .host }}
+  - host: {{ .host | quote }}
+    http:
+  {{- else }}
+  - http:
+  {{- end }}
+  paths:
+    {{- range .paths }}
+    - path: {{ .path }}
+      {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
+      pathType: {{ .pathType }}
+      {{- end }}
+      backend:
+        service:
+          name: {{ $fullName }}
+          port:
+            number: {{ .Values.service.Port }}
     {{- end }}
+  {{- end }}
   {{- end }}
