--- a/helm/charts/orchestrator/values.yaml
+++ b/helm/charts/orchestrator/values.yaml
@@ -62,14 +62,30 @@ service:
   port: 7810
   targetPort: 7810
 
+#ingress:
+#  enabled: false
+#  annotations: {}
+#    # kubernetes.io/ingress.class: nginx
+#    # kubernetes.io/tls-acme: "true"
+#  hosts:
+#    - host: chart-example.local
+#      paths: []
+#  tls: []
+#  #  - secretName: chart-example-tls
+#  #    hosts:
+#  #      - chart-example.local
+
 ingress:
+  # -- Enables configuration of ingress to expose Spotfire Server. Requires ingress support in the Kubernetes cluster.
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  ingressClassName: haproxy-dp-dp1
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: ""
+      paths:
+        - path: /tibco/agent/integration/orchestrator/
+          pathType: Prefix
+  # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
+  annotations: {}
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
@@ -161,10 +177,15 @@ volumes:
       # -- Specifies the standard K8s resource requests and/or limits
       resources:
         requests:
-          storage: 2Gi
+          storage: 8Gi
+
+      accessModes:
+        - ReadWriteOnce
+
+      volumeMode: Filesystem
 
       # -- Specifies the name of the persistent volume
-      volumeName: "test-pvc"
+      volumeName: ""
 
     # -- When `persistentVolumeClaim.create` is `false`, then use this value to define an already-existing PVC.
     existingClaim: ""
