--- a/helm/charts/bwbuildserver/values.yaml
+++ b/helm/charts/bwbuildserver/values.yaml
@@ -1,9 +1,9 @@
-# Default values for buildserver.
+# Default values for bwbuildserver.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 global:
-  buildserver:
+  bwbuildserver:
     data:
       namespace: dp-integration-default
     image:
@@ -19,7 +19,7 @@ global:
 replicaCount: 1
 
 image:
-  repository: tci/buildserver
+  repository: tci/bwbuildserver
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -75,7 +75,7 @@ ingress:
   hosts:
     - host: ""
       paths:
-        - path: /tibco/agent/integration/buildserver/
+        - path: /tibco/agent/integration/bwbuildserver/
           pathType: Prefix
   # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
   annotations: {}
@@ -113,7 +113,7 @@ config:
   DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
 
 volumes:
-  buildserver:
+  bwbuildserver:
     volumePath: "/data/"
     persistentVolumeClaim:
       # -- If `true`, then a `PersistentVolumeClaim` (PVC) is created.
