--- a/helm/charts/apiserver/values.yaml
+++ b/helm/charts/apiserver/values.yaml
@@ -1,11 +1,24 @@
 # Default values for apiserver.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+global:
+  apiserver:
+    data:
+      namespace: dp-integration-default
+    image:
+      registry: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com
+      tag: 2557-dp-integration
+    logging:
+      image:
+        enabled: false
+        registry: ""
+        tag: ""
+        resources: {}
 
 replicaCount: 1
 
 image:
-  repository: tci/buildserver
+  repository: tci/apiserver
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -40,18 +53,50 @@ service:
   type: ClusterIP
   port: 80
 
+#ingress:
+#  enabled: false
+#  annotations: {}
+#    # kubernetes.io/ingress.class: nginx
+#    # kubernetes.io/tls-acme: "true"
+#  hosts:
+#    - host: chart-example.local
+#      paths: []
+#  tls: []
+#  #  - secretName: chart-example-tls
+#  #    hosts:
+#  #      - chart-example.local
+
 ingress:
+  # -- Enables configuration of ingress to expose Spotfire Server. Requires ingress support in the Kubernetes cluster.
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  ingressClassName: haproxy-dp-dp1
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: ""
+      paths:
+        - path: /tibco/agent/integration/apiserver/
+          pathType: Prefix
+  # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
+  annotations: {}
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
+
+  ingressExternal:
+    # -- Enables configuration of ingress to expose Spotfire Server. Requires ingress support in the Kubernetes cluster.
+    enabled: false
+    ingressClassName: traefik
+    hosts:
+      - host: "test.tci-env.ap-southeast-2.tcie.pro"
+        paths:
+          - path: /
+            pathType: Prefix
+    # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
+    annotations: {}
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
