API Server chart update

--- a/helm/charts/apiserver/templates/ingress_external.yaml
+++ b/helm/charts/apiserver/templates/ingress_external.yaml
@@ -1,9 +1,9 @@
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.ingressExternal.enabled -}}
 {{- $fullName := include "apiserver.fullname" . -}}
 {{- $releaseName := .Release.Name -}}
-{{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
-  {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
-  {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
+{{- if and .Values.ingressExternal.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
+  {{- if not (hasKey .Values.ingressExternal.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.ingressExternal.annotations "kubernetes.io/ingress.class" .Values.ingressExternal.className}}
   {{- end }}
 {{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -20,16 +20,16 @@ metadata:
     app.kubernetes.io/component: load-balancer
     {{- include "apiserver.labels" . | nindent 4 }}
   annotations:
-    {{- with .Values.ingress.annotations }}
+    {{- with .Values.ingressExternal.annotations }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
 spec:
-  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: {{ .Values.ingress.className }}
+  {{- if and .Values.ingressExternal.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  ingressClassName: {{ .Values.ingressExternal.className }}
   {{- end }}
-  {{- if .Values.ingress.tls }}
+  {{- if .Values.ingressExternal.tls }}
   tls:
-    {{- range .Values.ingress.tls }}
+    {{- range .Values.ingressExternal.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
@@ -38,7 +38,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-  {{- range .Values.ingress.hosts }}
+  {{- range .Values.ingressExternal.hosts }}
     {{- if .host }}
     - host: {{ .host | quote }}
       http:
