--- a/helm/charts/apiserver/templates/deployment.yaml
+++ b/helm/charts/apiserver/templates/deployment.yaml
@@ -31,22 +31,100 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+#         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: {{ .Values.global.apiserver.image.registry }}/tci/tci-apiserver:{{ .Values.global.apiserver.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - name: http
-              containerPort: 80
-              protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+              scheme: HTTP
+              path: v1/liveness
+              port: {{ .Values.service.port }}
+            initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
+            failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
+            periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
+            timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:
+            {{- range $filename, $content :=  .Values.config }}
+            {{- if $content }}
+            - name: {{ $filename }}
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: {{ $filename }}
+            {{- end }}
+            {{- end }}
+        {{- if .Values.global.apiserver.logging.enabled }}
+        - name: fluent-bit
+          image: {{ .Values.global.apiserver.logging.image.registry }}/tci/fluent-bit:{{ .Values.global.apiserver.logging.image.registry.tag }}
+          imagePullPolicy: {{ .Values.global.imagePullPolicy }}
+          resources:
+            {{- toYaml .Values.global.apiserver.deploymanager.resources | nindent 12 }}
+          securityContext:
+            privileged: true
+          ports:
+            - containerPort: 2020
+          env:
+            - name: ACCOUNT_ID
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: SERVICE_LOGSERVER_HOST
+            - name: SERVICE_LOGSERVER_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: SERVICE_LOGSERVER_HOST
+
+            - name: SERVICE_LOGSERVER_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: SERVICE_LOGSERVER_USER
+
+            - name: LOGSERVER_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: LOGSERVER_PASSWORD
+
+            - name: SERVICE_LOGSERVER_INDEX
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: SERVICE_LOGSERVER_INDEX
+
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: TIBCO_INTERNAL_INTERCOM_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  key: TIBCO_INTERNAL_INTERCOM_URL
+            - name: POD_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.uid
+            - name: CONTAINER_NAME
+              value: {{ .Chart.Name }}
+
+          volumeMounts:
+            - name: dockercontainerlogs
+              mountPath: /var/lib/docker/containers/
+            - name: podlogs
+              mountPath: /var/log/pods
+            - name: fluent-bit-config
+              mountPath: /fluent-bit/etc/
+        terminationGracePeriodSeconds: 10
+        {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -59,3 +137,15 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      volumes:
+        {{- if .Values.global.apiserver.logging.enabled }}
+        - name: dockercontainerlogs
+            hostPath:
+              path: /var/lib/docker/containers/
+        - name: podlogs
+          hostPath:
+            path: /var/log/pods
+        - name: fluent-bit-config
+          configMap:
+            name: {{ include "apiserver.fluentConf" . }}
+        {{- end }}
