--- a/helm/charts/apiserver/values.yaml
+++ b/helm/charts/apiserver/values.yaml
@@ -51,8 +51,8 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
-
+  port: 7813
+  targetPort: 7813
 #ingress:
 #  enabled: false
 #  annotations: {}
@@ -65,6 +65,9 @@ service:
 #  #  - secretName: chart-example-tls
 #  #    hosts:
 #  #      - chart-example.local
+
+config:
+  DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
 
 ingress:
   # -- Enables configuration of ingress to expose Spotfire Server. Requires ingress support in the Kubernetes cluster.
@@ -82,21 +85,21 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-  ingressExternal:
+ ingressExternal:
     # -- Enables configuration of ingress to expose Spotfire Server. Requires ingress support in the Kubernetes cluster.
-    enabled: false
-    ingressClassName: traefik
-    hosts:
-      - host: "test.tci-env.ap-southeast-2.tcie.pro"
-        paths:
-          - path: /
-            pathType: Prefix
-    # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
-    annotations: {}
-    tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - chart-example.local
+   enabled: false
+   ingressClassName: traefik
+   hosts:
+     - host: "test.tci-env.ap-southeast-2.tcie.pro"
+       paths:
+         - path: /
+           pathType: Prefix
+   # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
+   annotations: {}
+   tls: []
+   #  - secretName: chart-example-tls
+   #    hosts:
+   #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
