--- a/helm/charts/orchestrator/templates/pvc.yaml
+++ b/helm/charts/orchestrator/templates/pvc.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ include "orchestrator.storage.pvc.name" . }}
-  namespace: {{ .Values.global.orchestrator.data.namespace }}
+#  namespace: {{ .Values.global.orchestrator.data.namespace }}
   labels:
   {{- include "orchestrator.labels" . | nindent 4 }}
   annotations:
