--- a/helm/charts/pluginsmanager/values.yaml
+++ b/helm/charts/pluginsmanager/values.yaml
@@ -7,12 +7,12 @@ replicaCount: 1
 global:
   pluginsmanager:
     data:
-      operation: "extract"
-      SOURCE_REGISTRY: reldocker.tibco.com
-      DOCKER_REGISTRY: 664529841144.dkr.ecr.eu-west-1.amazonaws.com/tci
+      operation: "upload"
+      SOURCE_REGISTRY: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com/tci
+      DOCKER_REGISTRY: reldocker.tibco.com
 
 image:
-  repository: dwdraju/alpine-curl-jq
+  repository: ""
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
@@ -48,6 +48,11 @@ cfg:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
+service:
+  type: ClusterIP
+  port: 7820
+  targetPort: 7820
+
 podAnnotations: {}
 
 podSecurityContext: {}
@@ -80,91 +85,39 @@ tolerations: []
 affinity: {}
 
 plugins:
-# tci-bw-plugin-cloud.ftl:
-#   tag: 6.4.2.v5-tci-2.0
-#tci-bw-plugin-odata:
-#  tag: 6.2.2.v4.1.1-tci-2.0
-# tci-bw-plugin-dynamicscrm:
-#   tag: 6.9.0.v11-tci-2.0
-# tci-bw-plugin-sharepoint:
-#   tag: 6.2.1.v7-HF-001-tci-2.0
-# tci-bw-plugin-netsuite:
-#   tag: 6.3.3.v7.1-HF-001-tci-2.0
-# tci-bw-plugin-bwlx:
-#   tag: 6.1.3.v8.0.1-tci-2.0
-# tci-bw-plugin-amqp:
-#   tag: 6.1.0.v12.0.1-tci-2.0
-# tci-bw-plugin-mqtt:
-#   tag: 6.0.2.v4.1-tci-2.0
-# tci-bw-plugin-marketorest:
-#   tag: 7.2.1.v2.1-tci-2.0
-# tci-bw-plugin-workday:
-#   tag: 6.0.1.v5.1-HF-002-tci-2.0
-# tci-bw-plugin-servicenow:
-#   tag: 6.1.0.v3.0.1-tci-2.0
-# tci-bw-plugin-amazoncs:
-#   tag: 6.0.2.v18.1.1-tci-2.0
-# tci-bw-plugin-cassandra:
-#   tag: 6.3.0.v16.1-HF-002-tci-2.0
-# tci-bw-plugin-mongodb:
-#   tag: 6.3.1.v3.0.1-tci-2.0
-# tci-bw-plugin-amazons3:
-#   tag: 6.5.0.v9-tci-2.0
-# tci-bw-plugin-sqs:
-#   tag: 6.4.1.v27-ENGR-002-tci-2.0
-# tci-bw-plugin-salesforce:
-#   tag: 6.8.0.v9.0.1-tci-2.0
-# tci-bw-plugin-salesforce01630313:
-#   tag: 6.5.1.v4-ENGR-001-tci-2.0
-# tci-bw-plugin-kafka:
-#   tag: 6.5.0.v5-tci-2.0
-# tci-bw-plugin-sap:
-#   tag: 8.3.0.v3.2-tci-2.0
-# tci-bw-plugin-ldap:
-#   tag: 7.2.0.v18.1-HF-003-tci-2.0
-# tci-bw-plugin-twitter:
-#   tag: 6.1.1.v1.3.2-tci-2.0
-# tci-bw-plugin-excel:
-#   tag: 6.1.1.v6.0.1-tci-2.0
-# tci-bw-plugin-swift:
-#   tag: 6.5.0.v7.2-ENGR-1.33-tci-tci-2.0
-# tci-bw-plugin-pdf:
-#   tag: 6.2.2.v5.0.1-tci-2.0
-# tci-bw-plugin-adbplugin:
-#   tag: 8.3.2.v11.2-tci-2.0
-# tci-bw-plugin-saphana:
-#   tag: 6.0.0.v7.1.3-tci-2.0
-# tci-bw-plugin-peoplesoft:
-#   tag: 7.0.1.v5.2-HF-001-tci-2.0
-# tci-bw-plugin-successfactors:
-#   tag: 6.0.0.v12.1-tci-2.0
-# tci-bw-plugin-s4hanacloud:
-#   tag: 6.1.0.v9.0.2-tci-2.0
-# tci-bw-plugin-sftp:
-#   tag: 6.1.3.v15.1-HF-002-tci-2.0
-# tci-bw-plugin-oebs:
-#   tag: 6.1.2.v5.0.1-tci-2.0
-# tci-bw-plugin-smartmapper:
-#   tag: 7.1.2.v2.1-tci-2.0
-# tci-bw-plugin-auditsafe:
-#   tag: 6.1.0.v9.1-tci-2.0
-# tci-bw-plugin-edi:
-#   tag: 6.3.1.v3.2-tci-2.0
-# tci-bw-plugin-hl7:
-#   tag: 8.1.0.v38.2-HF-002-tci-2.0
-# tci-bw-plugin-ibmi:
-#   tag: 7.2.1.v3-HF-002-tci-2.0
-# tci-bw-plugin-dataconversion:
-#   tag: 4.6.0.v6.1-tci-2.0
-# tci-bw-plugin-mq:
-#   tag: 8.6.0.v38.5-tci-2.0
+  tci-bw-plugin-acs:
+    tag: 6.0.0.v8.1-tci-2.0
+#  tci-bw-plugin-sharepoint:
+#    tag: 6.4.0.v7-tci-2.0
+#  tci-bw-plugin-googlepubsub:
+#    tag: 6.0.2.v6-tci-2.0
+#  tci-bw-plugin-sqs:
+#    tag: 6.5.2.v17-tci-2.0
+#  tci-bw-plugin-smpp:
+#    tag: 6.0.3.v5-tci-2.0
+#  tci-bw-plugin-odata:
+#    tag: 6.5.0.v7-tci-2.0
+#  tci-bw-plugin-oerp:
+#    tag: 6.0.0.v11-tci-2.0
+#  tci-bw-plugin-ibmi:
+#    tag: 7.3.0.v6.2-tci-2.0
+#  tci-bw-plugin-dataconversion:
+#    tag: 4.7.0.v5.2-tci-2.0
+#  tci-bw-plugin-mq:
+#    tag: 8.8.2.v1.1-tci-2.0
+#  tci-bw-plugin-bc:
+#    tag: 6.3.1.v12.1-tci-2.0
+
+ingress:
+  # -- Enables configuration of ingress to expose pluginsmanager. Requires ingress support in the Kubernetes cluster.
+  enabled: false
 
 volumes:
   pluginsmanager:
     volumePath: "/data/"
     persistentVolumeClaim:
       # -- If `true`, then a `PersistentVolumeClaim` (PVC) is created.
-      create: true
+      create: false
 
       # -- Specifies the name of the `StorageClass`
       # in case of kind use "standard"
@@ -185,4 +138,4 @@ volumes:
       volumeName: ""
 
     # -- When `persistentVolumeClaim.create` is `false`, then use this value to define an already-existing PVC.
-    existingClaim: ""
+    existingClaim: "test-cp-integration-fs-store-claim"
